@startuml ERD

entity "Customer" {
  * id : int <<PK>>
  --
  * name : string
  * email : string
}

entity "SushiItem" {
  * id : int <<PK>>
  --
  * name : string
  * price : float
  * category : string
  * description : string
}

entity "Order" {
  * id : int <<PK>>
  --
  * customer_id : int <<FK>>
  * status : string
}

entity "OrderDetail" {
  * id : int <<PK>>
  --
  * order_id : int <<FK>>
  * sushi_item_id : int <<FK>>
  * quantity : int
}

Customer ||--o{ Order : places
Order ||--o{ OrderDetail : contains
SushiItem ||--o{ OrderDetail : includes

@enduml
